CLDR-18948 Cleanup